--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "framer-motion": "^9.1.6",
     "gatsby": "^5.6.0",
     "gatsby-plugin-image": "^3.6.0",
-    "gatsby-plugin-netlify": "^5.1.0",
     "gatsby-plugin-sharp": "^5.6.0",
     "gatsby-source-contentful": "^8.6.0",
     "gatsby-transformer-sharp": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3"
+  },
+  "devDependencies": {
+    "gatsby-plugin-netlify": "^5.1.0"
   }
 }
