--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "framer-motion": "^9.1.6",
     "gatsby": "^5.6.0",
-    "gatsby-plugin-image": "^3.6.0",
+    "gatsby-plugin-image": "^3.7.0",
     "gatsby-plugin-netlify": "^5.1.0",
-    "gatsby-plugin-sharp": "^5.6.0",
+    "gatsby-plugin-sharp": "^5.7.0",
+    "gatsby-source-contentful": "^8.7.0",
     "gatsby-transformer-sharp": "^5.6.0",
+    "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3"
