--- a/package.json
+++ b/package.json
@@ -15,21 +15,22 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.13",
     "classnames": "^2.3.2",
+    "contentful": "^9.3.5",
     "framer-motion": "^9.1.6",
     "gatsby": "^5.6.0",
     "gatsby-plugin-image": "^3.7.0",
     "gatsby-plugin-netlify": "^5.1.0",
+    "gatsby-plugin-postcss": "^6.7.0",
     "gatsby-plugin-sharp": "^5.7.0",
     "gatsby-source-contentful": "^8.7.0",
     "gatsby-transformer-sharp": "^5.6.0",
     "hamburger-react": "^2.5.0",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
-    "autoprefixer": "^10.4.13",
-    "gatsby-plugin-postcss": "^6.7.0",
-    "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
 }
